--- a/src/App.scss
+++ b/src/App.scss
@@ -1,30 +1,27 @@
 * {
     margin: 0 !important;
     padding: 0 !important;
-    box-sizing: border-box;
-}
-
-svg {
-    font-size: 1.5em;
+    box-sizing: border-box !important;
 }
 
 //
 // GLOBAL CLASSES
 //
 
-.fLex {
+.rOw {
     display: flex;
     flex-direction: row;
 }
-
+.coL {
+    display: flex;
+    flex-direction: column;
+}
 .align-center {
     align-items: center;
 }
-
 .space-Evenly {
     justify-content: space-evenly;
 }
-
 .betWeen {
     justify-content: space-between;
 }
@@ -33,15 +30,22 @@ svg {
 // GENERAL FONTS
 // 
 
+svg {
+    font-size: 1.5em;
+}
 .top-nav-items.container {
     width: auto;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
 }
-
 .icons-container {
     display: flex;
     flex-direction: row;
     margin-left: 15px !important;
+}
+.profile-icon {
+    padding: 3px !important;
+    border: 1px solid black;
+    border-radius: 50%;
 }
