--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
     padding: 0 !important;
     box-sizing: border-box !important;
 }
+.container {
+    width: auto !important;
+}
 
 //
 // GLOBAL CLASSES
