--- a/src/components/publication/publication.scss
+++ b/src/components/publication/publication.scss
@@ -2,6 +2,8 @@
     width: 100%;
     height: 50vh;
 
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
     background-color: beige;
 }
 
@@ -22,4 +24,12 @@
 
 .publication-params {
     width: auto;
+}
+
+.publication-content {
+    width: 100%;
+    height: 60% !important;
+    
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
