--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,9 @@
 .betWeen {
     justify-content: space-between !important;
 }
+.m-left {
+    margin-left: 8px !important;
+}
 
 //
 // GENERAL FONTS
