--- a/src/components/postOverview/postOverview.scss
+++ b/src/components/postOverview/postOverview.scss
@@ -1,16 +1,9 @@
-.postOverview-container {
+table {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: #F5B257;
+    background-color: orange;
 }
-.publiOverview {
-    width: 130px !important;
-    height: 130px;
 
-    // TODO Outlined
-    // margin: 3px !important;
-    // outline: 1px solid black !important;
-
+td {
+    height: 17vh;
+    border: 1px solid black;
 }
