MAJ DOSSIER BEFORE

--- a/src/components/publication/publication.scss
+++ b/src/components/publication/publication.scss
@@ -3,7 +3,7 @@
 
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    background-color: beige;
+    background-color: #F8F8F8;
 }
 .publication-header {
     height: 5vh;
