--- a/src/components/contactStories/contactStories.scss
+++ b/src/components/contactStories/contactStories.scss
@@ -1,12 +1,18 @@
 #contact-stories-container {
-    width: 100%;
-    height: 80px;
+  width: 100%;
+  height: 80px;
 
-    background-color: #AEE8CE;
+  background-color: #aee8ce;
 }
 .story-container {
-    width: 60px;
-    height: 60px;
-    border: 1px solid black;
-    border-radius: 50%;
+  width: 60px;
+  height: 60px;
+
+  border-radius: 50px; /*1*/
+  border: 2px solid transparent; /*2*/
+  background: linear-gradient(45deg, red, blue) border-box; /*3*/
+  -webkit-mask: /*4*/ linear-gradient(#fff 0 0) padding-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor; /*5'*/
+  mask-composite: exclude; /*5*/
 }
