--- a/src/components/home/contactStories/contactStories.scss
+++ b/src/components/home/contactStories/contactStories.scss
@@ -1,6 +1,7 @@
 #contact-stories-container {
   width: 100%;
   height: 80px;
+  padding: 0px 8px 0px 8px !important;
 
   background-color: #aee8ce;
 }
