--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,11 @@
     display: flex;
     flex-direction: column;
 }
+.justify-Center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .align-center {
     align-items: center !important;
 }
