--- a/src/components/home/publication/publication.scss
+++ b/src/components/home/publication/publication.scss
@@ -1,8 +1,8 @@
 .publication-bloc {
-    width: 100%;
+    width: calc(100% - 16px);
+    margin: 8px !important;
 
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border: 1px solid black;
     background-color: #F8F8F8;
 }
 .publication-header {
