--- a/src/components/profile/profileInfo/profileInfo.scss
+++ b/src/components/profile/profileInfo/profileInfo.scss
@@ -1,7 +1,7 @@
 #profile-infos {
     width: 100%;
-    height: 10vh;
-    padding: 0px 8px 0px 8px !important;
+    height: 80px;
+    padding: 0px 10px 0px 10px !important;
     
     display: flex;
     flex-direction: row;
